--- a/app/src/main/assets/trainger.html
+++ b/app/src/main/assets/trainger.html
@@ -1,1 +1,63 @@
-<b>Dette er Triangerings siden</b>
+<!DOCTYPE html>
+<html lang="da">
+<head>
+    <!-- Tillad æ,ø og å -->
+    <meta charset="utf-8" />
+
+    <!-- Skriver en title ud på fanen -->
+    <title>Help</title>
+
+    <style>
+        .center{
+        text-align: center;
+        }
+
+        .red {
+        margin: auto;
+        width: 1%;
+        border: 4px solid red;
+        padding: 15px;
+        -webkit-border-radius: 90px;
+        }
+        .yellow {
+        margin: auto;
+        width: 1%;
+        border: 4px solid yellow;
+        padding: 15px;
+        -webkit-border-radius: 90px;
+        }
+        .blue {
+        margin: auto;
+        width: 1%;
+        border: 4px solid blue;
+        padding: 15px;
+        -webkit-border-radius: 90px;
+        }
+        .green {
+        margin: auto;
+        width: 1%;
+        border: 4px solid green;
+        padding: 15px;
+        -webkit-border-radius: 90px;
+        }
+
+
+    </style>
+
+</head>
+
+<body>
+
+<div class="center">
+    <h1>Information om triangering</h1>
+    <div class="red"></div>
+    <h6> Er du triangeret som rød, vil det sige ...</h6>
+    <div class="yellow"></div>
+    <h6> Er du triangeret som gul, vil det sige ...</h6>
+    <div class="green"></div>
+    <h6> Er du triangeret som grøn, vil det sige ...</h6>
+    <div class="blue"></div>
+    <h6> Er du triangeret som blå, vil det sige ...</h6>
+
+</div>
+</body>
