--- a/app/src/main/assets/trainger.html
+++ b/app/src/main/assets/trainger.html
@@ -40,6 +40,13 @@
         padding: 15px;
         -webkit-border-radius: 90px;
         }
+        .orange {
+        margin: auto;
+        width: 1%;
+        border: 4px solid orange;
+        padding: 15px;
+        -webkit-border-radius: 90px;
+        }
 
 
     </style>
@@ -49,15 +56,22 @@
 <body>
 
 <div class="center">
-    <h1>Information om triangering</h1>
+    <h2>Information om triangering</h2>
     <div class="red"></div>
-    <h6> Er du triangeret som rød, vil det sige ...</h6>
+    <h6> Er du triageret med farven rød, vil der være en læge tilstede ved din ankomst eller der vil blive tilkaldt en omgående. Du vil opleve kontinuerlig monitorering, og sygeplejersken vil forblive på din stue. </h6>
+    <div class="orange"></div>
+    <h6> Er du triageret med farven orange, vil en læge vurdere dig inden for 15 min efter din ankomst. Derefter vil du blive revurderet min. hvert 15 min.
+    </h6>
     <div class="yellow"></div>
-    <h6> Er du triangeret som gul, vil det sige ...</h6>
+    <h6> Er du triageret med farven gul, vil du blive vurderet af en læge inden for 60 min efter din ankomst. Derefter vil du blive revurderet min. en gang i time. Er du et barn, vil du blive revurderet min. en gang hver halve time.  </h6>
     <div class="green"></div>
-    <h6> Er du triangeret som grøn, vil det sige ...</h6>
+    <h6> Er du triageret med farven grøn, vil du blive tilset at en læge inden for 180 min. efter din ankomst. Du vil min. blive revurderet hver 3. time hvis du er voksen, og hver time hvis du er et barn. Denne tid afhængere at mængden af patienter i akutmodtagelsen. </h6>
     <div class="blue"></div>
-    <h6> Er du triangeret som blå, vil det sige ...</h6>
+    <h6> Er du triageret med farven blå, er du en patient med en mindre skade. Du skal derfor ikke have målt vitale parametre. Er du patient i denne gruppe, har du pådraget dig en pludselige opstået skade og opfylder nedenstående 3 punkter:<br>
+        - Du er vågen og klinisk upåvirket<br>
+        - Du har en eller flere simple isolerede skader og der er sket en vurdering af din skadesmekanisme.<br>
+        - Der er ikke mistanke om at du har flere skade end den skade der er vurderet.<br>
+    </h6>
 
 </div>
 </body>
