--- a/app/src/main/assets/trainger.html
+++ b/app/src/main/assets/trainger.html
@@ -15,35 +15,35 @@
         .red {
         margin: auto;
         width: 1%;
-        border: 4px solid red;
+        border: 4px solid #ef4428;
         padding: 15px;
         -webkit-border-radius: 90px;
         }
         .yellow {
         margin: auto;
         width: 1%;
-        border: 4px solid yellow;
+        border: 4px solid #ffff00;
         padding: 15px;
         -webkit-border-radius: 90px;
         }
         .blue {
         margin: auto;
         width: 1%;
-        border: 4px solid blue;
+        border: 4px solid #008ae6;
         padding: 15px;
         -webkit-border-radius: 90px;
         }
         .green {
         margin: auto;
         width: 1%;
-        border: 4px solid green;
+        border: 4px solid #00ff00;
         padding: 15px;
         -webkit-border-radius: 90px;
         }
         .orange {
         margin: auto;
         width: 1%;
-        border: 4px solid orange;
+        border: 4px solid #FFA500;
         padding: 15px;
         -webkit-border-radius: 90px;
         }
